@@ -9,3 +9,9 @@ AIOptions = A.I. options
 changeSkin = Change skin
 specifyYourOwnSkins = Specify your own skins!
 chooseAPicture = Choose a picture
+resolution = Resolution
+runOnStartup = Run on startup
+placeOnTop = Place on top
+thisFeatureIsSupportedOnlyOn = I don't know how to ask {{os}}-tan to call me at startup :(
+errorStartingOnBoot = {{os}}-tan doesn't want to call me at startup :(
+errorRemovingFromBoot = {{os}}-tan loves me so much that wants at all costs call me at startup <3
