@@ -5,3 +5,4 @@
 - Add support for Java 1.6    (@af4df85cc8)
 - Add l10n support for the UI (@6080e4edda @56ef840009)
 - Decrease MenuPanel opacity when mouse exits
+- Implement run on startup
